--- a/(Refactored) CommunityAssessment.ipynb
+++ b/(Refactored) CommunityAssessment.ipynb
@@ -438,7 +438,7 @@
     "    ax_table = axs[1, 0]\n",
     "    fig.patch.set_facecolor('white') # Ensure figure background is white\n",
     "\n",
-    "    # --- Appealing Pie Charts ---\n",
+    "    # --- Pie Charts ---\n",
     "    for i, (title, gdf) in enumerate(zip(['Mill Pond', 'Stump Pond'], [land_use_mill_pond, land_use_stump_pond])):\n",
     "        # Calculate the area of each land use polygon within the buffer\n",
     "        gdf['area'] = gdf.geometry.area\n",
@@ -451,7 +451,7 @@
     "        labels = [land_use_mapping_codes.get(str(code), f'Unknown ({code})') for code in land_use_pct.index]\n",
     "        colors = [land_use_colors.get(land_use_mapping_codes.get(str(code)), 'gray') for code in land_use_pct.index]\n",
     "\n",
-    "        # Plotting Pie with better aesthetics\n",
+    "        # Plotting Pie \n",
     "        wedges, texts, autotexts = axs_pie[i].pie(\n",
     "            land_use_pct,\n",
     "            labels=None, # Don't show labels on the pie itself\n",
@@ -471,13 +471,13 @@
     "        axs_pie[i].spines['left'].set_edgecolor('black')\n",
     "        axs_pie[i].spines['right'].set_edgecolor('black')\n",
     "\n",
-    "    # Create a more visually appealing legend\n",
+    "    # Create legend\n",
     "    handles = [plt.Rectangle((0, 0), 1, 1, color=land_use_colors.get(label, 'gray'), edgecolor='black') for label in land_use_colors]\n",
     "    labels_legend = list(land_use_colors.keys())\n",
     "    fig.legend(handles, labels_legend, loc='lower center', bbox_to_anchor=(0.5, 0.05), ncol=len(land_use_colors),\n",
     "               fontsize=14, frameon=False, title='Land Use Types', title_fontsize=16)\n",
     "\n",
-    "    # --- Appealing Table ---\n",
+    "    # --- Table ---\n",
     "    land_use_table_data = []\n",
     "    for code, name in land_use_mapping_codes.items():\n",
     "        color = land_use_colors.get(name, 'gray')\n",
